--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version> 4.3.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.12.5</version>
@@ -111,8 +117,6 @@
             <version>0.12.5</version>
             <scope>runtime</scope>
         </dependency>
-
-
     </dependencies>
 
     <build>
