added new step for kubectl

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -16,7 +16,12 @@ jobs:
           COMMIT_HASH=$(git rev-parse --short HEAD)
           docker build -t user-service-image:$COMMIT_HASH .
           docker tag user-service-image:$COMMIT_HASH user-service-image:latest
-    
+          
+      - name: Install kubectl
+        run: |
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/      
 
       - name: Deploy to Minikube
         run: |
