removed type value from getting sent idk2

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,4 +19,5 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: "*"
-        spring.json.use.type.headers: false
+        spring.json.add.type.headers: false
+
