added consumer for updateQuantity

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,5 +19,5 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: "*"
-        spring.json.add.type.headers: false
-
+        spring.json.use.type.headers: false
+        spring.json.value.default.type: org.example.productService.dto
