--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,4 +20,4 @@ spring:
       properties:
         spring.json.trusted.packages: "*"
         spring.json.use.type.headers: false
-        spring.json.value.default.type: org.example.productService.dto
+        spring.json.value.default.type: org.example.productService.dto.Event
